- Add Font Awesome - Add Custom CSS - Fix Socket

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href='/css/template.min.css' rel='stylesheet'>
     <link href='/css/template.dark.min.css' rel='stylesheet'>
+    <link href='/css/bahu.css' rel='stylesheet'>
   </head>
   <body>
     <noscript>
