--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,12 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link href='/css/template.min.css' rel='stylesheet'>
-    <link href='/css/template.dark.min.css' rel='stylesheet'>
-    <link href='/css/bahu.css' rel='stylesheet'>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app" class="layout"></div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
